common/foxglovetopb/parser/foxgloveschema_parser.go
// Code generated from FoxgloveSchema.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // FoxgloveSchema
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type FoxgloveSchemaParser struct {
	*antlr.BaseParser
}

var FoxgloveSchemaParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func foxgloveschemaParserInit() {
	staticData := &FoxgloveSchemaParserStaticData
	staticData.LiteralNames = []string{
		"", "'/'", "'false'", "'true'", "'['", "']'", "'='", "'<='", "'================================================================================'",
		"'MSG: '", "'bool'", "'bytes'", "'char'", "'float32'", "'float64'",
		"'int8'", "'uint8'", "'int16'", "'uint16'", "'int32'", "'uint32'", "'int64'",
		"'uint64'", "'string'", "'wstring'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "OPEN_BRA", "CLOSE_BRA", "EQ", "LT_EQ", "SCHEMA_SPLIT",
		"SUB_SCHEMA_HEADER", "BOOL", "BYTES", "CHAR", "FLOAT32", "FLOAT64",
		"INT8", "UINT8", "INT16", "UINT16", "INT32", "UINT32", "INT64", "UINT64",
		"STRING", "WSTRING", "IDENTIFIER", "NUMERIC_LITERAL", "BOOL_LITERAL",
		"STRING_LITERAL", "SKIP_",
	}
	staticData.RuleNames = []string{
		"parse", "mainSchema", "subSchema", "schemaName", "schema", "constance",
		"field", "expr", "fieldType", "type", "arrayType", "customType", "fieldName",
		"buildinType",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// FoxgloveSchemaParserInit initializes any static state used to implement FoxgloveSchemaParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewFoxgloveSchemaParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func FoxgloveSchemaParserInit() {
	staticData := &FoxgloveSchemaParserStaticData
	staticData.once.Do(foxgloveschemaParserInit)
}

// NewFoxgloveSchemaParser produces a new parser instance for the optional input antlr.TokenStream.
func NewFoxgloveSchemaParser(input antlr.TokenStream) *FoxgloveSchemaParser {
	FoxgloveSchemaParserInit()
	this := new(FoxgloveSchemaParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &FoxgloveSchemaParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "FoxgloveSchema.g4"

	return this
}

// FoxgloveSchemaParser tokens.
const (
	FoxgloveSchemaParserEOF               = antlr.TokenEOF
	FoxgloveSchemaParserT__0              = 1
	FoxgloveSchemaParserT__1              = 2
	FoxgloveSchemaParserT__2              = 3
	FoxgloveSchemaParserOPEN_BRA          = 4
	FoxgloveSchemaParserCLOSE_BRA         = 5
	FoxgloveSchemaParserEQ                = 6
	FoxgloveSchemaParserLT_EQ             = 7
	FoxgloveSchemaParserSCHEMA_SPLIT      = 8
	FoxgloveSchemaParserSUB_SCHEMA_HEADER = 9
	FoxgloveSchemaParserBOOL              = 10
	FoxgloveSchemaParserBYTES             = 11
	FoxgloveSchemaParserCHAR              = 12
	FoxgloveSchemaParserFLOAT32           = 13
	FoxgloveSchemaParserFLOAT64           = 14
	FoxgloveSchemaParserINT8              = 15
	FoxgloveSchemaParserUINT8             = 16
	FoxgloveSchemaParserINT16             = 17
	FoxgloveSchemaParserUINT16            = 18
	FoxgloveSchemaParserINT32             = 19
	FoxgloveSchemaParserUINT32            = 20
	FoxgloveSchemaParserINT64             = 21
	FoxgloveSchemaParserUINT64            = 22
	FoxgloveSchemaParserSTRING            = 23
	FoxgloveSchemaParserWSTRING           = 24
	FoxgloveSchemaParserIDENTIFIER        = 25
	FoxgloveSchemaParserNUMERIC_LITERAL   = 26
	FoxgloveSchemaParserBOOL_LITERAL      = 27
	FoxgloveSchemaParserSTRING_LITERAL    = 28
	FoxgloveSchemaParserSKIP_             = 29
)

// FoxgloveSchemaParser rules.
const (
	FoxgloveSchemaParserRULE_parse       = 0
	FoxgloveSchemaParserRULE_mainSchema  = 1
	FoxgloveSchemaParserRULE_subSchema   = 2
	FoxgloveSchemaParserRULE_schemaName  = 3
	FoxgloveSchemaParserRULE_schema      = 4
	FoxgloveSchemaParserRULE_constance   = 5
	FoxgloveSchemaParserRULE_field       = 6
	FoxgloveSchemaParserRULE_expr        = 7
	FoxgloveSchemaParserRULE_fieldType   = 8
	FoxgloveSchemaParserRULE_type        = 9
	FoxgloveSchemaParserRULE_arrayType   = 10
	FoxgloveSchemaParserRULE_customType  = 11
	FoxgloveSchemaParserRULE_fieldName   = 12
	FoxgloveSchemaParserRULE_buildinType = 13
)

// IParseContext is an interface to support dynamic dispatch.
type IParseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	MainSchema() IMainSchemaContext
	EOF() antlr.TerminalNode
	AllSCHEMA_SPLIT() []antlr.TerminalNode
	SCHEMA_SPLIT(i int) antlr.TerminalNode
	AllSubSchema() []ISubSchemaContext
	SubSchema(i int) ISubSchemaContext

	// IsParseContext differentiates from other interfaces.
	IsParseContext()
}

type ParseContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParseContext() *ParseContext {
	var p = new(ParseContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FoxgloveSchemaParserRULE_parse
	return p
}

func InitEmptyParseContext(p *ParseContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FoxgloveSchemaParserRULE_parse
}

func (*ParseContext) IsParseContext() {}

func NewParseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParseContext {
	var p = new(ParseContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FoxgloveSchemaParserRULE_parse

	return p
}

func (s *ParseContext) GetParser() antlr.Parser { return s.parser }

func (s *ParseContext) MainSchema() IMainSchemaContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMainSchemaContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMainSchemaContext)
}

func (s *ParseContext) EOF() antlr.TerminalNode {
	return s.GetToken(FoxgloveSchemaParserEOF, 0)
}

func (s *ParseContext) AllSCHEMA_SPLIT() []antlr.TerminalNode {
	return s.GetTokens(FoxgloveSchemaParserSCHEMA_SPLIT)
}

func (s *ParseContext) SCHEMA_SPLIT(i int) antlr.TerminalNode {
	return s.GetToken(FoxgloveSchemaParserSCHEMA_SPLIT, i)
}

func (s *ParseContext) AllSubSchema() []ISubSchemaContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ISubSchemaContext); ok {
			len++
		}
	}

	tst := make([]ISubSchemaContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ISubSchemaContext); ok {
			tst[i] = t.(ISubSchemaContext)
			i++
		}
	}

	return tst
}

func (s *ParseContext) SubSchema(i int) ISubSchemaContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISubSchemaContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISubSchemaContext)
}

func (s *ParseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ParseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FoxgloveSchemaListener); ok {
		listenerT.EnterParse(s)
	}
}

func (s *ParseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FoxgloveSchemaListener); ok {
		listenerT.ExitParse(s)
	}
}

func (p *FoxgloveSchemaParser) Parse() (localctx IParseContext) {
	localctx = NewParseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, FoxgloveSchemaParserRULE_parse)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(28)
		p.MainSchema()
	}
	p.SetState(33)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == FoxgloveSchemaParserSCHEMA_SPLIT {
		{
			p.SetState(29)
			p.Match(FoxgloveSchemaParserSCHEMA_SPLIT)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(30)
			p.SubSchema()
		}

		p.SetState(35)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(36)
		p.Match(FoxgloveSchemaParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IMainSchemaContext is an interface to support dynamic dispatch.
type IMainSchemaContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Schema() ISchemaContext

	// IsMainSchemaContext differentiates from other interfaces.
	IsMainSchemaContext()
}

type MainSchemaContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMainSchemaContext() *MainSchemaContext {
	var p = new(MainSchemaContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FoxgloveSchemaParserRULE_mainSchema
	return p
}

func InitEmptyMainSchemaContext(p *MainSchemaContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FoxgloveSchemaParserRULE_mainSchema
}

func (*MainSchemaContext) IsMainSchemaContext() {}

func NewMainSchemaContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MainSchemaContext {
	var p = new(MainSchemaContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FoxgloveSchemaParserRULE_mainSchema

	return p
}

func (s *MainSchemaContext) GetParser() antlr.Parser { return s.parser }

func (s *MainSchemaContext) Schema() ISchemaContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISchemaContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISchemaContext)
}

func (s *MainSchemaContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MainSchemaContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MainSchemaContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FoxgloveSchemaListener); ok {
		listenerT.EnterMainSchema(s)
	}
}

func (s *MainSchemaContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FoxgloveSchemaListener); ok {
		listenerT.ExitMainSchema(s)
	}
}

func (p *FoxgloveSchemaParser) MainSchema() (localctx IMainSchemaContext) {
	localctx = NewMainSchemaContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, FoxgloveSchemaParserRULE_mainSchema)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(38)
		p.Schema()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISubSchemaContext is an interface to support dynamic dispatch.
type ISubSchemaContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SUB_SCHEMA_HEADER() antlr.TerminalNode
	SchemaName() ISchemaNameContext
	Schema() ISchemaContext

	// IsSubSchemaContext differentiates from other interfaces.
	IsSubSchemaContext()
}

type SubSchemaContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySubSchemaContext() *SubSchemaContext {
	var p = new(SubSchemaContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FoxgloveSchemaParserRULE_subSchema
	return p
}

func InitEmptySubSchemaContext(p *SubSchemaContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FoxgloveSchemaParserRULE_subSchema
}

func (*SubSchemaContext) IsSubSchemaContext() {}

func NewSubSchemaContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SubSchemaContext {
	var p = new(SubSchemaContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FoxgloveSchemaParserRULE_subSchema

	return p
}

func (s *SubSchemaContext) GetParser() antlr.Parser { return s.parser }

func (s *SubSchemaContext) SUB_SCHEMA_HEADER() antlr.TerminalNode {
	return s.GetToken(FoxgloveSchemaParserSUB_SCHEMA_HEADER, 0)
}

func (s *SubSchemaContext) SchemaName() ISchemaNameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISchemaNameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISchemaNameContext)
}

func (s *SubSchemaContext) Schema() ISchemaContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISchemaContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISchemaContext)
}

func (s *SubSchemaContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SubSchemaContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SubSchemaContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FoxgloveSchemaListener); ok {
		listenerT.EnterSubSchema(s)
	}
}

func (s *SubSchemaContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FoxgloveSchemaListener); ok {
		listenerT.ExitSubSchema(s)
	}
}

func (p *FoxgloveSchemaParser) SubSchema() (localctx ISubSchemaContext) {
	localctx = NewSubSchemaContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, FoxgloveSchemaParserRULE_subSchema)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(40)
		p.Match(FoxgloveSchemaParserSUB_SCHEMA_HEADER)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(41)
		p.SchemaName()
	}
	{
		p.SetState(42)
		p.Schema()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISchemaNameContext is an interface to support dynamic dispatch.
type ISchemaNameContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllIDENTIFIER() []antlr.TerminalNode
	IDENTIFIER(i int) antlr.TerminalNode

	// IsSchemaNameContext differentiates from other interfaces.
	IsSchemaNameContext()
}

type SchemaNameContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySchemaNameContext() *SchemaNameContext {
	var p = new(SchemaNameContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FoxgloveSchemaParserRULE_schemaName
	return p
}

func InitEmptySchemaNameContext(p *SchemaNameContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FoxgloveSchemaParserRULE_schemaName
}

func (*SchemaNameContext) IsSchemaNameContext() {}

func NewSchemaNameContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SchemaNameContext {
	var p = new(SchemaNameContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FoxgloveSchemaParserRULE_schemaName

	return p
}

func (s *SchemaNameContext) GetParser() antlr.Parser { return s.parser }

func (s *SchemaNameContext) AllIDENTIFIER() []antlr.TerminalNode {
	return s.GetTokens(FoxgloveSchemaParserIDENTIFIER)
}

func (s *SchemaNameContext) IDENTIFIER(i int) antlr.TerminalNode {
	return s.GetToken(FoxgloveSchemaParserIDENTIFIER, i)
}

func (s *SchemaNameContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SchemaNameContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SchemaNameContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FoxgloveSchemaListener); ok {
		listenerT.EnterSchemaName(s)
	}
}

func (s *SchemaNameContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FoxgloveSchemaListener); ok {
		listenerT.ExitSchemaName(s)
	}
}

func (p *FoxgloveSchemaParser) SchemaName() (localctx ISchemaNameContext) {
	localctx = NewSchemaNameContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, FoxgloveSchemaParserRULE_schemaName)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(44)
		p.Match(FoxgloveSchemaParserIDENTIFIER)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(49)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == FoxgloveSchemaParserT__0 {
		{
			p.SetState(45)
			p.Match(FoxgloveSchemaParserT__0)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(46)
			p.Match(FoxgloveSchemaParserIDENTIFIER)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

		p.SetState(51)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISchemaContext is an interface to support dynamic dispatch.
type ISchemaContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllField() []IFieldContext
	Field(i int) IFieldContext
	AllConstance() []IConstanceContext
	Constance(i int) IConstanceContext

	// IsSchemaContext differentiates from other interfaces.
	IsSchemaContext()
}

type SchemaContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySchemaContext() *SchemaContext {
	var p = new(SchemaContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FoxgloveSchemaParserRULE_schema
	return p
}

func InitEmptySchemaContext(p *SchemaContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FoxgloveSchemaParserRULE_schema
}

func (*SchemaContext) IsSchemaContext() {}

func NewSchemaContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SchemaContext {
	var p = new(SchemaContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FoxgloveSchemaParserRULE_schema

	return p
}

func (s *SchemaContext) GetParser() antlr.Parser { return s.parser }

func (s *SchemaContext) AllField() []IFieldContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFieldContext); ok {
			len++
		}
	}

	tst := make([]IFieldContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFieldContext); ok {
			tst[i] = t.(IFieldContext)
			i++
		}
	}

	return tst
}

func (s *SchemaContext) Field(i int) IFieldContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFieldContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFieldContext)
}

func (s *SchemaContext) AllConstance() []IConstanceContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IConstanceContext); ok {
			len++
		}
	}

	tst := make([]IConstanceContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IConstanceContext); ok {
			tst[i] = t.(IConstanceContext)
			i++
		}
	}

	return tst
}

func (s *SchemaContext) Constance(i int) IConstanceContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConstanceContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConstanceContext)
}

func (s *SchemaContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SchemaContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SchemaContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FoxgloveSchemaListener); ok {
		listenerT.EnterSchema(s)
	}
}

func (s *SchemaContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FoxgloveSchemaListener); ok {
		listenerT.ExitSchema(s)
	}
}

func (p *FoxgloveSchemaParser) Schema() (localctx ISchemaContext) {
	localctx = NewSchemaContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, FoxgloveSchemaParserRULE_schema)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(56)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&67107840) != 0 {
		p.SetState(54)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext()) {
		case 1:
			{
				p.SetState(52)
				p.Field()
			}

		case 2:
			{
				p.SetState(53)
				p.Constance()
			}

		case antlr.ATNInvalidAltNumber:
			goto errorExit
		}

		p.SetState(58)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IConstanceContext is an interface to support dynamic dispatch.
type IConstanceContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	FieldType() IFieldTypeContext
	IDENTIFIER() antlr.TerminalNode
	EQ() antlr.TerminalNode
	Expr() IExprContext

	// IsConstanceContext differentiates from other interfaces.
	IsConstanceContext()
}

type ConstanceContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyConstanceContext() *ConstanceContext {
	var p = new(ConstanceContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FoxgloveSchemaParserRULE_constance
	return p
}

func InitEmptyConstanceContext(p *ConstanceContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FoxgloveSchemaParserRULE_constance
}

func (*ConstanceContext) IsConstanceContext() {}

func NewConstanceContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ConstanceContext {
	var p = new(ConstanceContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FoxgloveSchemaParserRULE_constance

	return p
}

func (s *ConstanceContext) GetParser() antlr.Parser { return s.parser }

func (s *ConstanceContext) FieldType() IFieldTypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFieldTypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFieldTypeContext)
}

func (s *ConstanceContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(FoxgloveSchemaParserIDENTIFIER, 0)
}

func (s *ConstanceContext) EQ() antlr.TerminalNode {
	return s.GetToken(FoxgloveSchemaParserEQ, 0)
}

func (s *ConstanceContext) Expr() IExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *ConstanceContext) GetRuleContext() antlr.RuleContext {
	return s
}
